--- a/style.css
+++ b/style.css
@@ -1,19 +1,10 @@
-@font-face {
-    font-family: 'clear_sans_lightregular';
-    src: url('ClearSans-Light-webfont.eot');
-    src: url('ClearSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('ClearSans-Light-webfont.woff2') format('woff2'),
-         url('ClearSans-Light-webfont.woff') format('woff'),
-         url('ClearSans-Light-webfont.ttf') format('truetype'),
-         url('ClearSans-Light-webfont.svg#clear_sans_lightregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'clear_sans_lightregular', Arial, sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 }
 
 /* 1140 px*/
